@@ -15,5 +15,6 @@
 
 org.apache.lucene.analysis.charfilter.HTMLStripCharFilterFactory
 org.apache.lucene.analysis.charfilter.MappingCharFilterFactory
+org.apache.lucene.analysis.cjk.CJKWidthCharFilterFactory
 org.apache.lucene.analysis.fa.PersianCharFilterFactory
 org.apache.lucene.analysis.pattern.PatternReplaceCharFilterFactory
